bobcat (1.12.1)

  * inline virtual destructors have an explicit `inline' mentioned in their
    class interfaces to prevent compilation problems caused by a small g++
    (4.1.2) bug.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 30 Nov 2006 13:26:52 +0100

bobcat (1.12.0)

  * All classes have their inline-functions moved out of the interface. They
    are now implemented inline below the interface itself.

    X2a now has a copy constructor and an overloaded assignment operator

    A2x now has a copy constructor (which was announced in the man-page, but
    was never implemented).

    Table's functionality has been enlarged. Consult its manpage for details
    
    Redirector's `accessVia' member is now deprecated. Instead `swallow'
    should be used.

    The String class's object member functions are now deprecated. Instead
    static member functions have been defined offering the same
    functionality. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 15 Nov 2006 19:25:49 +0100

bobcat (1.11.0)

  * The classes Wrap1c, Wrap2 and Wrap2c were fully generalized, now accepting
    any combination of reference, pointer, const reference or const pointer
    argument types for both the function called from their operator()()
    function call operator and (with Wrap1c and Wrap2c) the local context
    struct. Since this results in an extension of the class's API, I upgraded
    to the next subversion. Since the Wrap* classes are templated classes, the
    library hasn't changed, and all programes previously compiled against
    libbobcat1 should continue to run without any required maintenance.

    The man-pages were updated accordingly. 

    The icmake-script was updated so that it runs on both icmake 6.xx and the
    upcoming icmake 7.xx release.

    Started to move inline definitions of members to below the class
    interface. Done for a2x and datetime.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 14 Oct 2006 14:47:37 +0200

bobcat (1.10.2)
