@@ -1,19 +1,3 @@
-Remove throw-lists from:
-
-./localsocketbase/localsocketbase
-./inetaddress/inetaddress
-./arg/arg
-./selector/selector
-./refcount/refcount
-./configfile/configfile
-./socketbase/socketbase
-./msg/msg
-./clientsocket/clientsocket
-./pipe/pipe
-./fork/fork
-./redirector/redirector
-./localclientsocket/localclientsocket
-./user/user
-
+nothing so far
 --
 
