@@ -1,2 +1,2 @@
-VERSION=1.12.1
-YEARS=2005-2006
+VERSION=1.12.2
+YEARS=2005-2007
