@@ -10,7 +10,7 @@ namespace FBB
     {
         public:
             A2x();
-            A2x(char const *txt);                   // initialize from text
+            A2x(char const *txt);          // initialize from text
             A2x(std::string const &str);
             A2x(A2x const &other);
 
