@@ -1,7 +1,6 @@
 #include "arg.ih"
 
-Arg &Arg::initialize(char const *optstring, int argc, char **argv) 
-                                                                throw (Errno)
+Arg &Arg::initialize(char const *optstring, int argc, char **argv)
 {
     if (s_arg)
         throw Errno("Arg::initialize(): already initialized");
