@@ -10,11 +10,10 @@ namespace FBB
 class ClientSocket: public SocketBase
 {
     public:
-                                    // host may be address or name
-        ClientSocket(std::string const &host, uint16_t port) throw (Errno);
+                                // host may be address or name
+        ClientSocket(std::string const &host, uint16_t port);
 
-        int connect() throw (Errno);    // returns fd (socket) to talk to
-                                        // the server
+        int connect();          // returns fd (socket) to talk to the server
 };
 
 } // FBB
