@@ -1,6 +1,6 @@
 #include "clientsocket.ih"
 
-ClientSocket::ClientSocket(string const &host, uint16_t port) throw (Errno)
+ClientSocket::ClientSocket(string const &host, uint16_t port)
 :
     SocketBase(host, port)
 {}
