@@ -89,7 +89,7 @@ class ConfigFile: public std::vector<std::string>
 
         void setCommentHandling(Comment type);
         void setSearchCasing(SearchCasing type);
-        void open(std::string const &fname) throw (Errno);
+        void open(std::string const &fname);
         const_RE_iterator beginRE(std::string const &re) const;
         const_RE_iterator endRE() const;
         const_iterator find(std::string const &target) const;
