@@ -14,7 +14,7 @@ class Fork
     public:
         inline virtual ~Fork();     // g++ bug workaround
 
-        void fork() throw (Errno);
+        void fork();
 
     protected:
         pid_t pid() const;
