@@ -20,12 +20,12 @@ class InetAddress
         uint16_t port() const;
 
             // replaces the formerly available getAddress() member.
-        std::string dottedDecimalAddress() const throw (Errno);
+        std::string dottedDecimalAddress() const;
         sockaddr const *sockaddrPtr() const;
         size_t size() const;
 
     protected:
-        InetAddress(std::string const &host, uint16_t port) throw (Errno);
+        InetAddress(std::string const &host, uint16_t port);
         InetAddress(uint16_t port);
         InetAddress(sockaddr_in const &address);
 
