@@ -17,7 +17,7 @@ void info(std::ostream &out);
 void spool(std::ostream &out);
 void warning(std::ostream &out);
 void err(std::ostream &out);
-void fatal(std::ostream &out) throw (Errno);
+void fatal(std::ostream &out);
 std::ostringstream &msg();
 std::ostringstream &lineMsg();
 
@@ -27,7 +27,7 @@ class Msg
     friend void spool(std::ostream &out);
     friend void info(std::ostream &out);
     friend void warning(std::ostream &out);
-    friend void fatal(std::ostream &out) throw (Errno);
+    friend void fatal(std::ostream &out);
 
     friend std::ostringstream &msg();
     friend std::ostringstream &msgstream();
