@@ -17,7 +17,7 @@ class Pipe
         int d_fd[2];
 
     public:
-        Pipe() throw(Errno);
+        Pipe();
         Pipe(int const *fd);
 
         int readFd() const;
