@@ -20,8 +20,8 @@ class Redirector
 
         Redirector(int fd);
 
-        void accessVia(int alternateFd) const throw (Errno);
-        void swallow(int alternateFd) const throw (Errno);
+        void accessVia(int alternateFd) const;
+        void swallow(int alternateFd) const;
 };            
 
 inline Redirector::Redirector(int fd)
@@ -29,7 +29,7 @@ inline Redirector::Redirector(int fd)
     d_fd(fd)
 {}
 
-inline void Redirector::accessVia(int alternateFd) const throw (Errno)
+inline void Redirector::accessVia(int alternateFd) const
 {
     swallow(alternateFd);
 }
