@@ -26,7 +26,7 @@ class Selector
     public:
         Selector();
 
-        int wait() throw(Errno);// nReady() and the get...() members 
+        int wait();             // nReady() and the get...() members 
                                 // perform defined behavior only after 
                                 // wait() returns.
 
