@@ -17,28 +17,28 @@ class SocketBase: public InetAddress
     int         d_sock;
 
     public:
-        bool debug() const throw(Errno);
-        bool reuse() const throw(Errno);
+        bool debug() const;
+        bool reuse() const;
         int socket() const;
-        bool setDebug(bool trueIsOn) throw (Errno);
-        bool setReuse(bool trueIsOn) throw (Errno);
+        bool setDebug(bool trueIsOn);
+        bool setReuse(bool trueIsOn);
 
     protected:
-        SocketBase(uint16_t port) throw (Errno);            // 1
-        SocketBase(std::string const &host, uint16_t port) throw (Errno);
-        SocketBase(int socket, sockaddr_in const &address); // 2
+        SocketBase(uint16_t port);
+        SocketBase(std::string const &host, uint16_t port);
+        SocketBase(int socket, sockaddr_in const &address);
 
     private:
-        bool boolOption(int optname) const throw (Errno);
-        bool setBoolOption(int optname, bool newValue) throw (Errno);
+        bool boolOption(int optname) const;
+        bool setBoolOption(int optname, bool newValue);
 };
 
-inline bool SocketBase::debug() const throw(Errno)
+inline bool SocketBase::debug() const
 {
     return boolOption(SO_DEBUG);
 }
 
-inline bool SocketBase::reuse() const throw(Errno)
+inline bool SocketBase::reuse() const
 {
     return boolOption(SO_REUSEADDR);
 }
@@ -48,12 +48,12 @@ inline int SocketBase::socket() const
     return d_sock;
 }
 
-inline bool SocketBase::setDebug(bool trueIsOn) throw (Errno)
+inline bool SocketBase::setDebug(bool trueIsOn)
 {
     return setBoolOption(SO_DEBUG, trueIsOn);
 }
 
-inline bool SocketBase::setReuse(bool trueIsOn) throw (Errno)
+inline bool SocketBase::setReuse(bool trueIsOn)
 {
     return setBoolOption(SO_REUSEADDR, trueIsOn);
 }
