@@ -17,7 +17,7 @@ class User
     size_t d_gid;
 
     public:
-        User() throw (Errno);
+        User();
 
         size_t groupid() const;
         size_t userid() const;
