@@ -1,3 +1,10 @@
+bobcat (1.12.2)
+
+  * (ISN)
+
+  * All function/member/constructor throw() specifications removed, following
+    Sutter & Alexandrescu's suggestions
+
 bobcat (1.12.1)
 
   * inline virtual destructors have an explicit `inline' mentioned in their
